--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,25 @@
 #timer-btn {
+  width: 100px;
+  height: 40px;
   padding: 10px;
   margin: 10px;
 }
 
+.timer-btn-active-state {
+  background-color: olivedrab;
+}
+
+.timer-btn-paused-state {
+  background-color: skyblue;
+}
+
+.btn-off-state {
+  background-color: sandybrown;
+}
+
 #reset-btn {
+  width: 100px;
+  height: 40px;
   padding: 10px;
   margin: 10px;
 }
