--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,30 @@
 #time-display {
   padding: 10px;
 }
+
+.task-item {
+  display: flex;
+  align-items: center;
+  width: 550px;
+  height: 42px;
+  background-color: lightpink;
+  /* display: inline-block; */
+  /* padding: 5px; */
+  margin: 5px;
+  box-shadow: 0 8px 12px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 8px;
+}
+
+.task-name {
+  display: flex;
+  align-items: center;
+  width: 300px;
+  height: 28px;
+  background-color: rgb(252, 126, 145);
+  /* display: inline-block; */
+  /* padding: 5px; */
+  margin: 5px;
+  padding-left: 5px;
+  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.3);
+  border-radius: 4px;
+}
